--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
   geolocator: ^13.0.4
-  http: ^1.3.0
-  open_weather_client: ^2.4.1
-  weatherapi: ^1.1.0
-  weather: ^3.2.1
+  #http: ^1.3.0
+  #open_weather_client: ^2.4.1
+  #weatherapi: ^1.1.0
+  #weather: ^3.2.1
 
 dev_dependencies:
   flutter_test:
