--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_svg: ^2.0.17
   geolocator: ^13.0.4
   http: ^1.3.0
+  provider: ^6.1.4
+  flutter_screenutil: ^5.9.3
   #open_weather_client: ^2.4.1
   #weatherapi: ^1.1.0
   #weather: ^3.2.1
